Практическая работа 5/TaIFya5/src/main/java/Expr.g4
grammar Expr;
expr: left=add(op+=('+'|'-')right+=add)*;
add: left=mul(op+=('*'|'/')right+=mul)*;
mul: num=NUMBER | '(' expr ')';
NUMBER: [0-9]+('.'[0-9]*)? | '.' [0-9]+;
WHITESPACE: [ \n\r\t]+ -> skip;
ADD: '+';
SUB: '-';
MUL: '*';
DIV: '/';
